# web

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  API.md  Dockerfile  Pipfile  README.md  biome.json  build  dev-requirements.in  dev-requirements.txt  docker-compose.yml  get_facebook_access_token  import_db  import_media  manage.py  nginx-default.conf  pyproject.toml  requirements.in  requirements.txt  reset_db  setup_and_run  tatu  test_postgres  wait_for_app
.github/workflows/: codeql-analysis.yml  main.yml
academy/: asgi.py  autologin.py  celery.py  context_processors.py  cors.py  debug_toolbar.py  password_validators.py  routing.py  settings.py  urls.py  utils.py  wsgi.py
academy/settings/: base.py  development.py  development_postgres.py  production.py
chat/: consumers.py  models.py  routing.py
chat/migrations/: 0001_initial.py
dump/: .gitignore  dump_db  dump_images
games/: achievements.py  admin.py  auth.py  context_processors.py  facebook.py  models.py  ranking.py  seed.py  serializers.py  shuffle_indices.py  tasks.py  tests.py  utils.py  views.py
games/migrations/: 0001_initial.py  0002_auto_20190707_0053.py  0002_auto_20190803_2241.py  0002_auto_20190806_0020.py  0003_auto_20190707_0056.py  0003_auto_20190804_2218.py  0003_auto_20190809_2339.py  0004_auto_20190707_0110.py  0004_remove_user_old_password_hash.py  0005_auto_20190707_0131.py  0005_auto_20190811_2104.py  0006_auto_20190802_2319.py  0006_auto_20190812_0254.py  0007_auto_20190812_0258.py  0007_playerstat.py  0008_game_dnf.py  0008_remove_playerstat_fastest_chug_game.py  0009_auto_20190803_0417.py  0009_auto_20200215_2321.py  0009_gameplayerstat.py  0010_auto_20190803_1958.py  0010_auto_20200218_1717.py  0011_auto_20200419_1649.py  0012_merge_20200421_2322.py  0013_auto_20200422_2037.py  0014_gametoken.py  0015_onetimepassword.py  0016_auto_20200423_0534.py  0017_auto_20200806_1941.py  0018_game_image.py  0019_auto_20200912_1956.py  0020_game_facebook_post_id.py  0021_auto_20201028_2232.py  0022_game_shuffle_indices.py  0023_auto_20201029_1603.py  0024_auto_20210413_1834.py  0025_auto_20210420_2222.py  0026_gameplayer_dnf_datetime.py  0027_playerstat_total_games_with_game_dnf_and_more.py
static/css/: styles.css
static/js/: script.js
svelte/: .gitignore  apps.py  build_components  dev  index.html  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  snowpack.config.json
svelte/public/: index.html
svelte/src/: CardCell.svelte  Chug.svelte  ColoredSuit.svelte  GameDetail.svelte  GameDetail_init.js  GameDetail_init.ts  Image.svelte  Map.svelte  PlayerStats.svelte  Players.js  Players.svelte  SipsGraph.svelte  TimeGraph.svelte  globals.js  globals.ts  types.ts
svelte/templates/: svelte_include.html
svelte/templatetags/: svelte.py
web/: admin.py  apps.py  context_processors.py  forms.py  heatmap.py  models.py  stats.py  tests.py  urls.py  utils.py  views.py
web/migrations/: 0001_initial.py  0002_auto_20200720_1917.py  0003_auto_20200720_1920.py  0004_failedgameupload_user.py  0005_alter_failedgameupload_id.py  0006_alter_failedgameupload_id.py  0007_alter_failedgameupload_game_log.py
web/templates/: about.html  base.html  chooser.html  container.html  failed_game_upload.html  footer.html  game_detail.html  game_list.html  index.html  login.html  nav.html  (+14 more)
(+15 files in other folders)
