[tool.black]
target-version = ['py37']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | db_data
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.poetry]
name = "academy"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
django = "~2.2"
django-extensions = "^2.2"
ipython = "^7.7"
pillow = "^6.1"
bcrypt = "^3.1"
djangorestframework = "^3.10"
django-filter = "^2.2"
tqdm = "^4.32"
django-bootstrap4 = "^0.0.8"
gunicorn = "^19.9"
python-dotenv = "^0.10.3"
whitenoise = "^4.1"
psycopg2 = "^2.8"
django-debug-toolbar = "^2.0"
facebook-sdk = "^3.1"
celery = "^4.3"
django-celery-beat = "^1.5"
django-constance = {version = "^2.5", extras = ["database"]}
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
