[tool.black]
target-version = ['py38']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | db_data
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.poetry]
name = "academy"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
django = "~3.0"
django-extensions = "*"
ipython = "*"
pillow = "*"
bcrypt = "*"
djangorestframework = "*"
django-filter = "*"
tqdm = "*"
django-bootstrap4 = "*"
python-dotenv = "*"
whitenoise = "*"
psycopg2 = "*"
django-debug-toolbar = "*"
facebook-sdk = "*"
celery = {extras = ["redis"], version = "*"}
django-celery-beat = "*"
django-constance = {version = "*", extras = ["database"]}
scipy = "*"
channels = "*"
channels_redis = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
