[project]
name = ""
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "django-extensions>=3.2.3",
    "ipython>=8.32.0",
    "pillow>=11.1.0",
    "bcrypt>=4.2.1",
    "djangorestframework>=3.15.2",
    "django-filter>=24.3",
    "tqdm>=4.67.1",
    "django-bootstrap4>=24.4",
    "python-dotenv>=1.0.1",
    "psycopg[binary]>=3.2.4",
    "django-debug-toolbar>=5.0.1",
    "facebook-sdk>=3.1.0",
    "celery[redis]>=5.4.0",
    "django-celery-beat>=2.7.0",
    "django-constance>=4.3.1",
    "scipy>=1.15.1",
    "channels>=4.2.0",
    "daphne>=4.1.2",
    "channels-redis>=4.2.1",
    "django-cors-headers>=4.6.0",
    "django-webpush",
]

[tool.ruff]
target-version = "py313"

[tool.uv]
package = false

[tool.uv.sources]
# Latest release has a missing migration
django-webpush = { git = "https://github.com/safwanrahman/django-webpush.git", rev = "57125f53286a42dccc7037e0f38d08d16d6b425e" }

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
